JavaDoc and code improvements based on SonarQube log