@@ -2,7 +2,6 @@ package com.lottie4j.core.helper;
 
 import com.fasterxml.jackson.core.JsonGenerator;
 import com.fasterxml.jackson.databind.JsonSerializer;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializerProvider;
 
 import java.io.IOException;
@@ -15,14 +14,12 @@ import java.util.stream.Collectors;
  */
 public class ListListSerializer extends JsonSerializer {
 
-    private final ObjectMapper mapper = ObjectMapperFactory.getInstance();
-
     /**
      * Serializes a nested list structure to JSON.
      * Each inner list is expected to contain coordinate pairs.
      *
-     * @param o the object to serialize (expected to be a List of List of Doubles)
-     * @param jsonGenerator the JSON generator
+     * @param o                  the object to serialize (expected to be a List of List of Doubles)
+     * @param jsonGenerator      the JSON generator
      * @param serializerProvider the serializer provider
      * @throws IOException if serialization fails
      */
@@ -30,7 +27,7 @@ public class ListListSerializer extends JsonSerializer {
     public void serialize(Object o, JsonGenerator jsonGenerator, SerializerProvider serializerProvider) throws IOException {
         String rt = "[" +
                 ((List<List<Double>>) o).stream()
-                        .map(v -> "[" + getValue(v.get(0)) + "," + getValue(v.get(1)) + "]")
+                        .map(v -> "[" + getValue(v.getFirst()) + "," + getValue(v.get(1)) + "]")
                         .collect(Collectors.joining(",")) +
                 "]";
         jsonGenerator.writeRawValue(rt);
